<resources>
    <string name="app_name">Movie Explorer</string>

    <string name="login_title">Movie Explorer</string>
    <string name="login_subtitle">Sign in to browse the catalogue</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_login_failed">Login failed. Check your username and password and try again.</string>

    <string name="dashboard_title">Movies</string>
    <string name="dashboard_empty">No movies found</string>
    <string name="dashboard_error">Couldn\'t load movies.</string>
    <string name="action_retry">Retry</string>

    <string name="details_title">Movie Details</string>
    <string name="label_director">Director</string>
    <string name="label_genre">Genre</string>
    <string name="label_description">Description</string>
    <string name="movie_director_genre">%1$s • %2$s</string>

    <string name="error_generic">Something went wrong. Please try again.</string>
    <string name="error_network">Couldn\'t reach the server. Check your connection and try again.</string>
    <string name="error_timeout">The server is taking too long to respond. Please try again in a moment.</string>
</resources>
