<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.aashika.assignment2.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.aashika.assignment2.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard">

        <argument
            android:name="keypass"
            app:argType="string" />

        <action
            android:id="@+id/action_dashboard_to_details"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.aashika.assignment2.ui.details.DetailsFragment"
        android:label="@string/details_title"
        tools:layout="@layout/fragment_details">

        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="director"
            app:argType="string" />
        <argument
            android:name="genre"
            app:argType="string" />
        <argument
            android:name="releaseYear"
            app:argType="integer" />
        <argument
            android:name="description"
            app:argType="string" />
    </fragment>

</navigation>
